tests/res/visibility/private_method_call.say
// A private method is callable internally (via `this`) but not externally.
type Service {
    fn helper() { return 7; } // private method
    pub fn run() { return this.helper(); } // internal call: ok
    init() {}
}
say s = Service();
print(s.run()); // expect: 7
print(s.helper()); // error: Member 'helper' is private
